--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,19 +25,31 @@ header > p {
 #navbar {
 	display: flex;
 	justify-content: row;
+	align-items: center;
 	column-gap: 12px;
-	margin-top: 15px;
+	margin: 15px 0;
 	padding: 0 10px;
 	grid-area: "navbar";
 }
 
 #navbar > a {
 	text-decoration: none;
-	color: black;
+	color: #489edb;
 }
 
 #subbutton{
+	color: #489edb;
+	font-size: 16px;
+	border: 2px solid #489edb;
+	border-radius: 5px;
+	background-color: white;
+	padding: 10px;
 	margin-left: auto;
+	cursor: pointer;
+}
+
+#subbutton:hover{
+	box-shadow: rgba(72, 158, 219, 0.35) 0px 5px 10px;
 }
 
 #bloglist {
@@ -60,6 +72,11 @@ header > p {
 	width: 80%;
 }
 
+.blogcard:hover{
+	box-shadow: rgba(72, 158, 219, 0.35) 0px 5px 15px;
+	transform: scale(1.01);
+}
+
 .blogcard > h2 {
 	text-align: center;
 }
@@ -68,6 +85,7 @@ footer{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 20px;
 	padding-bottom: 20px;
 	grid-area: "footer";
 }
@@ -114,7 +132,7 @@ footer{
 	}
 }
 
-@media(min-width: 1600px){
+@media(min-width: 960px){
 	#bloglist > a{
 		width: 40%;
 	}
