--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url(pageStyles.css);
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -14,30 +15,30 @@ header{
 	grid-area: "header;
 }
 
-header > h1 {
+.page-title {
 	margin: 15px auto;
 }
 
-header > p {
+.page-summary {
 	margin-top: 0px;
 }
 
-#navbar {
+.navbar {
 	display: flex;
 	justify-content: row;
 	align-items: center;
 	column-gap: 12px;
-	margin: 15px 0;
+	margin: 15px 10px;
 	padding: 0 10px;
 	grid-area: "navbar";
 }
 
-#navbar > a {
+.navbar > a {
 	text-decoration: none;
 	color: #489edb;
 }
 
-#subbutton{
+.sub-button{
 	color: #489edb;
 	font-size: 16px;
 	border: 2px solid #489edb;
@@ -48,23 +49,23 @@ header > p {
 	cursor: pointer;
 }
 
-#subbutton:hover{
+.sub-button:hover{
 	box-shadow: rgba(72, 158, 219, 0.35) 0px 5px 10px;
 }
 
-#bloglist {
+.bloglist {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	grid-area: "bloglist";
 }
 
-#bloglist > a {
+.blog-card {
 	text-decoration: none;
 	color: #474747;
 }
 
-.blogcard {
+.card-content {
 	border: 2px solid #489edb;
 	border-radius: 10px;
 	margin: 15px auto;
@@ -72,12 +73,12 @@ header > p {
 	width: 80%;
 }
 
-.blogcard:hover{
+.card-content:hover{
 	box-shadow: rgba(72, 158, 219, 0.35) 0px 5px 15px;
 	transform: scale(1.01);
 }
 
-.blogcard > h2 {
+.card-title{
 	text-align: center;
 }
 
@@ -112,14 +113,14 @@ footer{
 		grid-area: 1/1/2/3;
 	}
 	
-	#navbar {
+	.navbar {
 		flex-direction: column;
 		align-items: center;
 		grid-row-gap: 10px;
 		grid-area: 2/1/3/2;
 	}
 	
-	#bloglist {
+	.bloglist {
 		grid-area: 2/2/3/3;
 	}
 	
@@ -127,17 +128,17 @@ footer{
 		grid-area:3/1/4/3
 	}
 
-	#subbutton {
+	.sub-button {
 		margin-left: 0px;
 	}
 }
 
 @media(min-width: 960px){
-	#bloglist > a{
+	.blog-card{
 		width: 40%;
 	}
 	
-	#bloglist{
+	.bloglist{
 		flex-direction: row;
 		justify-content: center;
 		flex-wrap: wrap;
