--- a/styles/pageStyles.css
+++ b/styles/pageStyles.css
@@ -108,6 +108,10 @@ footer{
 	grid-area: "footer";
 }
 
+.footer-icon-set {
+	margin: 0 auto;
+}
+
 @media(min-width:600px){
 	article{
 		grid-template-areas:
@@ -115,5 +119,24 @@ footer{
 			". intro ."
 			". figure ."
 			". body .";
+	}
+}
+
+@media(max-width:340px){
+	.icon {
+		margin: 0 10px;
+		width: 20px;
+		height: 20px;
+	}
+}
+
+@media(min-width:850px){
+	.header{
+		display: flex;
+		flex-direction: row;
+	}
+	
+	.author{
+		margin-left: auto;
 	}
 }
