--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-@import url(pageStyles.css);
+@import url('min960px.css') screen and (min-width:960px);
+@import url('max368px.css') screen and (max-width:368px);
+@import url('min800px.css') screen and (min-width:800px);
 
 body {
 	font-family: 'Open Sans', sans-serif;
@@ -82,6 +84,10 @@ header{
 	text-align: center;
 }
 
+.card-image {
+	width: 100%;
+}
+
 footer{
 	display: flex;
 	flex-direction: column;
@@ -89,6 +95,10 @@ footer{
 	margin-top: 20px;
 	padding-bottom: 20px;
 	grid-area: "footer";
+}
+
+.footer-icon-set {
+	margin: 0 auto;
 }
 
 .icon {
@@ -103,44 +113,6 @@ footer{
 }
 
 @media(min-width: 800px){
-	body{
-		display: grid;
-		grid-template-columns: 200px auto;
-		grid-template-rows: auto;
 
-	}
-	header {
-		grid-area: 1/1/2/3;
-	}
-	
-	.navbar {
-		flex-direction: column;
-		align-items: center;
-		grid-row-gap: 10px;
-		grid-area: 2/1/3/2;
-	}
-	
-	.bloglist {
-		grid-area: 2/2/3/3;
-	}
-	
-	footer{
-		grid-area:3/1/4/3
-	}
-
-	.sub-button {
-		margin-left: 0px;
-	}
 }
 
-@media(min-width: 960px){
-	.blog-card{
-		width: 40%;
-	}
-	
-	.bloglist{
-		flex-direction: row;
-		justify-content: center;
-		flex-wrap: wrap;
-	}
-}
